--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   device_info_plus: ^3.2.3
   http: ^0.13.4
   flutter_slidable: ^1.3.1
+  scoped_model: ^1.1.0
 
 dev_dependencies:
   flutter_test:
