--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,14 @@ dependencies:
   http: ^0.13.4
   flutter_slidable: ^1.3.1
   scoped_model: ^1.1.0
+  flutter_mobx: ^2.0.6+1
+  mobx: ^2.0.7+4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.2.0
+  mobx_codegen: ^2.0.7
 
   flutter_lints: ^2.0.0
 
